--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-email/components": "^0.0.36",
+    "@react-email/render": "^1.0.6",
     "@supabase/supabase-js": "^2.49.4",
     "@types/uuid": "^10.0.0",
     "better-auth": "^1.2.5",
@@ -52,15 +54,19 @@
     "framer-motion": "^12.6.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
+    "mailgun-js": "^0.22.0",
     "next": "15.3.0-canary.43",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.0",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-email": "^4.0.7",
     "react-hook-form": "^7.55.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tsx": "^4.19.3",
@@ -71,7 +77,9 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/mailgun-js": "^0.22.18",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
