--- a/package.json
+++ b/package.json
@@ -107,7 +107,6 @@
     "jsdom": "^26.1.0",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.1"
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
